--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 AuthType Basic
 AuthName "niigata"
-AuthUserFile "https://niigata-picture-book.herokuapp.com//.htpasswd "
+AuthUserFile "/Users/saitoutakayuki/projects/niigata-picture-book/.htpasswd"
 require valid-user
