--- a/.htaccess
+++ b/.htaccess
@@ -2,3 +2,4 @@ AuthType Basic
 AuthName "niigata"
 AuthUserFile "/Users/saitoutakayuki/projects/niigata-picture-book/.htpasswd"
 require valid-user
+php_flag display_errors on
