--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 AuthType Basic
 AuthName "niigata"
-AuthUserFile "file:///Users/saitoutakayuki/projects/niigata-picture-book/.htpasswd"
+AuthUserFile "ffile:///Users/saitoutakayuki/projects/niigata-picture-book/.htpasswd"
 require valid-user
 php_flag display_errors on
